content: 扩充第二卷 Ch02/Ch04/Ch05 信息密度
Ch02 JVM运行时数据区 (137→375行):
- 新增: 局部变量表与Slot详解(含this占位)
- 新增: 操作数栈工作过程图解
- 新增: 方法调用的栈帧变化完整示例
- 新增: 直接内存(DirectMemory)与NIO零拷贝
- 新增: Metaspace监控方法与OOM案例
- 新增: 字符串拼接编译器优化(invokedynamic)

Ch04 垃圾回收 (197→311行):
- 扩充: CMS四阶段流程详解(初始标记→并发标记→重新标记→并发清除)
- 扩充: G1回收过程(Young GC→并发标记→Mixed GC)
- 新增: RSet(Remembered Set)原理与代价分析
- 新增: G1可预测停顿机制(回收价值追踪)
- 新增: ZGC染色指针位布局详解
- 新增: GC日志解读(字段含义对照表)
- 新增: G1特有参数(G1HeapRegionSize/InitiatingHeapOccupancyPercent)

Ch05 JIT编译 (116→379行):
- 新增: 分层编译5级Level详解(0→4)
- 新增: 热点探测(方法调用计数器+回边计数器)
- 新增: Profiling收集的4类信息(类型/分支/调用/循环)
- 新增: 内联与虚方法(去虚化机制)
- 新增: 循环优化(循环展开/不变量外提/向量化SIMD)
- 新增: 去优化触发场景与过程详解
- 新增: 实战观察JIT(-XX:+PrintCompilation/JITWatch/JFR)